--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "next": "13.3.0",
+    "next-auth": "^4.22.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
     "typescript": "5.0.4",
     "zustand": "^4.3.7"
@@ -26,6 +28,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.22",
+    "prisma": "^4.13.0",
     "tailwindcss": "^3.3.1"
   }
 }
