--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.6",
+    "@prisma/client": "^4.13.0",
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
@@ -26,7 +28,9 @@
     "zustand": "^4.3.7"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "autoprefixer": "^10.4.14",
+    "bcrypt": "^5.1.0",
     "postcss": "^8.4.22",
     "prisma": "^4.13.0",
     "tailwindcss": "^3.3.1"
