Login Modal created

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://daenvle:Qazwsxedc123@cluster0.xasjs3b.mongodb.net/test"
+NEXTAUTH_SECRECT='NEXTAUTH_SECRECT'
