--- a/.prettierrc
+++ b/.prettierrc
@@ -10,7 +10,7 @@
     "quoteProps": "as-needed",
     "requirePragma": false,
     "semi": true,
-    "singleAttributePerLine": false,
+    "singleAttributePerLine": true,
     "singleQuote": true,
     "tabWidth": 3,
     "trailingComma": "es5",
