category navbar created

--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@
 
 DATABASE_URL="mongodb+srv://daenvle:Qazwsxedc123@cluster0.xasjs3b.mongodb.net/test"
 NEXTAUTH_SECRECT='NEXTAUTH_SECRECT'
+GITHUB_ID=d2f7ce7089881e51477a
+GITHUB_SECRET=c05f8d4822ba9a04f7c32b73b2033aa75cb7f169
